Fixed some margin issues on mobile with mixcloud widget

--- a/src/containers/Residents/SingleResidentContainer/SingleResidentComponent/SingleResidentComponent.scss
+++ b/src/containers/Residents/SingleResidentContainer/SingleResidentComponent/SingleResidentComponent.scss
@@ -322,6 +322,11 @@ $spanbg: rgba(72, 67, 73, 0.8);
 
 @media only screen and (max-width: 425px) {
 
+        
+    .resident-show-pastshows-container .cards-container{
+        left: 0;
+    } 
+
         .resident-mixcloud-tags-container{
             .mixcloud-tag{
                 span{
@@ -342,6 +347,12 @@ $spanbg: rgba(72, 67, 73, 0.8);
             margin: 10px 10px !important;
             padding: 10px 4px 10px 4px !important;
 
+        }
+
+        .most-recent {
+            .resident-pastshow-card{
+                margin: 0px !important;
+            }
         }
 
     .resident-show-display-container {
